# poker-calculator

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yaml
app/: di_container.py  main.py
app/config/: app_config.py
app/equity/domain/: equity_calculator.py
app/equity/infrastructure/: base_equity_calculator.py  hand_vs_hand_calculator.py  hand_vs_range_calculator.py  hands_from_range_generator.py  range_vs_range_calculator.py
app/equity/infrastructure/routes/: main.py
app/equity/infrastructure/routes/post_calculate_equity/: calculate_equity_request.py  calculate_equity_response.py  post_calculate_equity.py
app/equity/infrastructure/routes/v1/: calculate_equity_response.py
app/equity/infrastructure/routes/v1/hand_vs_hand/: calculate_hand_vs_hand.py  calculate_hand_vs_hand_request.py
app/equity/infrastructure/routes/v1/hand_vs_range/: calculate_hand_vs_range.py  calculate_hand_vs_range_request.py
app/equity/infrastructure/routes/v1/range_vs_range/: calculate_range_vs_range.py  calculate_range_vs_range_request.py
